[project]
name = "get-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "Shivam27799",email = "vermashivam27799@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "cli:main"
